pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference4.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(reference: ref.Reference<D, Any>): String = throw("not supported")
}
local d: D = new {}
typealias Ref<T> = ref.Reference<D, T>

test = ref.Reference(d, String, "") as Ref<Alias1?>

typealias Alias1 = Int | Alias2?
typealias Alias2 = Boolean
